--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "rust_onnx_nlp"
 version = "0.1.0"
+edition = "2021"
 
 [dependencies]
-ndarray.workspace = true
-tokenizers.workspace = true
+ndarray = "0.15.6"
+tokenizers = "0.13.3"
 tract-onnx = "0.20.4"
