--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 ndarray = "0.15.6"
 tokenizers = "0.13.3"
 tract-onnx = "0.20.4"
+actix-web = "4"
+
+[[bin]]
+name = "inference_api"
