--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ ndarray = "0.15.6"
 tokenizers = "0.13.3"
 tract-onnx = "0.20.4"
 actix-web = "4"
+serde = "1.0.163"
 
 [[bin]]
 name = "inference_api"
