--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 description = ""
 authors = ["smit zaveri <smitzaveri12@gmail.com>"]
 readme = "README.md"
-packages = [{include = "rust_onnx_nlp"}]
+
 
 [tool.poetry.dependencies]
-python = "^3.10"
-torch = "^2.0.1"
-transformers = "^4.29.0"
-onnx = "^1.14.0"
+python = "3.10.8"
+torch = "2.0.1"
+transformers = "4.29.0"
+onnx = "1.14.0"
 
 
 [build-system]
